Updated documentation folder (changed name)

--- a/InventoryManager/InventoryManager.csproj
+++ b/InventoryManager/InventoryManager.csproj
@@ -97,7 +97,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="NewFolder1\Requirements.html" />
+    <Content Include="Documentation\Requirements.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
