--- a/InventoryManagerLib/InventoryManagerLib.csproj
+++ b/InventoryManagerLib/InventoryManagerLib.csproj
@@ -50,6 +50,7 @@
     <Compile Include="OrderDetails.cs" />
     <Compile Include="OrderProcessing.cs" />
     <Compile Include="Orders.cs" />
+    <Compile Include="OrderStatus.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrder.cs" />
