worked on Employee Interface

--- a/InventoryManager/InventoryManager.csproj
+++ b/InventoryManager/InventoryManager.csproj
@@ -55,12 +55,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="EmployeeInterface.xaml.cs">
+      <DependentUpon>EmployeeInterface.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EmployeeLogIn.xaml.cs">
       <DependentUpon>EmployeeLogIn.xaml</DependentUpon>
     </Compile>
     <Compile Include="SecondWindow.xaml.cs">
       <DependentUpon>SecondWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="EmployeeInterface.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="EmployeeLogIn.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
