--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EDACB29-A257-4E2D-B2DF-BDC04660184E}</ProjectGuid>
+    <ProjectGuid>{12415F1A-500E-4549-8288-6A694BDD8D6B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InventoryManager</RootNamespace>
-    <AssemblyName>InventoryManager</AssemblyName>
+    <RootNamespace>Manager</RootNamespace>
+    <AssemblyName>Manager</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -55,36 +55,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="EmployeeInterface.xaml.cs">
-      <DependentUpon>EmployeeInterface.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="EmployeeLogIn.xaml.cs">
-      <DependentUpon>EmployeeLogIn.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="inventoryInterface.xaml.cs">
-      <DependentUpon>inventoryInterface.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="orderpicking.xaml.cs">
-      <DependentUpon>orderpicking.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Receiving.xaml.cs">
-      <DependentUpon>Receiving.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SecondWindow.xaml.cs">
-      <DependentUpon>SecondWindow.xaml</DependentUpon>
-    </Compile>
-    <Page Include="EmployeeInterface.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="EmployeeLogIn.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="inventoryInterface.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -97,18 +67,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="orderpicking.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Receiving.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SecondWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -138,13 +96,18 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Database\Database.sqlproj">
+      <Project>{2887425f-65f4-4bb9-8794-2da4119791c4}</Project>
+      <Name>Database</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InventoryManagerLib\InventoryManagerLib.csproj">
       <Project>{8027ac93-861b-4c1f-8132-b5a68d78adbe}</Project>
       <Name>InventoryManagerLib</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Documentation\Requirements.html" />
+    <ProjectReference Include="..\InventoryManager\InventoryManager.csproj">
+      <Project>{4edacb29-a257-4e2d-b2df-bdc04660184e}</Project>
+      <Name>InventoryManager</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
