Added install instruction to Documentation folder

--- a/InventoryManager/InventoryManager.csproj
+++ b/InventoryManager/InventoryManager.csproj
@@ -144,6 +144,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Documentation\InstallInstructions.txt" />
     <Content Include="Documentation\Requirements.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
